--- a/SphericalHarmonics.dproj
+++ b/SphericalHarmonics.dproj
@@ -301,6 +301,8 @@
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D1.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D1.DIff.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\D1\Legendre\LUX.D1.Legendre.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\D1\Legendre\LUX.D1.Legendre.DIff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D2.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D2.Diff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D2x2.pas"/>
@@ -308,7 +310,9 @@
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D3.Diff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D3x3.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4.Diff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4x4.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4x4.Diff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\Complex\LUX.Complex.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\Complex\LUX.Complex.Diff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\Color\LUX.Color.pas"/>
@@ -316,23 +320,15 @@
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.FMX.Graphics.D3\LUX.FMX.Graphics.D3.Shaper.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.Sphere\FMX\LUX.Sphere.FMX.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.Sphere\S2\LUX.S2.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\LUX.SH.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\FMX\LUX.SH.FMX.Graphics.D3.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.ALFs.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.ALFs.Diff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.ALFs.N8.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.ALFs.N8.DIff.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.ALFs.Term3.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.ALFs.Term3.Diff.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.NALFs.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.NALFs.Diff.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.NALFs.Term3.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.NALFs.Term3.Diff.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.NALFs.Term4.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.NALFs.Term4.Diff.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.FNALFs.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\ALFs\LUX.FNALFs.Diff.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\LUX.SH.pas"/>
         <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\LUX.SH.Diff.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\FMX\LUX.SH.FMX.Graphics.D3.pas"/>
         <DCCReference Include="ViewerSH3D.pas">
             <Form>ViewerSH3DFrame</Form>
             <DesignClass>TFrame</DesignClass>
@@ -345,8 +341,14 @@
             <Form>Form1</Form>
         </DCCReference>
         <DCCReference Include="Core.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4.Diff.pas"/>
-        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX\LUX.D4x4.Diff.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\NALFs\LUX.NALFs.Diff.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\NALFs\LUX.NALFs.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\NALFs\LUX.NALFs.Term3.Diff.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\NALFs\LUX.NALFs.Term3.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\NALFs\LUX.NALFs.Term4.Diff.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\NALFs\LUX.NALFs.Term4.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\FNALFs\LUX.FNALFs.pas"/>
+        <DCCReference Include="_LIBRARY\LUXOPHIA\LUX.SphericalHarmonics\FNALFs\LUX.FNALFs.Diff.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
